# kata-accounting-phase1

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  accounting.cpp  helper.sh
tests/: CMakeLists.txt  accounting_tests.cpp  contracts.hpp.in
